# request/user.go
@@ -12,9 +12,9 @@ type ChangePassword struct {
 }
 
 type CreateUser struct {
-	Email    string `json:"email"`
-	Username string `json:"username"`
-	NoHp     string `json:"noHp"`
-	Fullname string `json:"fullname"`
-	Passwd   string `json:"passwd"`
+	Fullname string `json:"fullname" form:"fullname" validate:"required,lte=80"`
+	Email    string `json:"email" form:"email" validate:"required,lte=200,email,notexists=email email"`
+	NoHp     string `json:"noHp" form:"noHp" validate:"required,lte=20,notexists=no_hp noHp"`
+	Username string `json:"username" form:"username" validate:"required,lte=20,lowercase,notexists=username username"`
+	Passwd   string `json:"passwd" form:"passwd" validate:"required,lte=200"`
 }
